trunk/src/objects/PeopleSubscription__c.object
<CustomObject>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>User</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <label>Subscriber</label>
        <referenceTo>User</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isSubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSubscribed</label>
        <type>Checkbox</type>
    </fields>
    <label>People Subscription</label>
    <nameField>
        <label>People Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>People Subscriptions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>